deploy: 0c789e0734cd63594c138598069e0ec9d67ed16e

--- a/genindex.html
+++ b/genindex.html
@@ -3608,6 +3608,18 @@
         <li><a href="source/evmspec.html#evmspec.TransactionRLP.to">(evmspec.TransactionRLP attribute)</a>
 </li>
       </ul></li>
+      <li><a href="source/evmspec.data.html#evmspec.data.BlockHash.to_0x_hex">to_0x_hex() (evmspec.data.BlockHash method)</a>
+
+      <ul>
+        <li><a href="source/evmspec.data.html#evmspec.data.HexBytes32.to_0x_hex">(evmspec.data.HexBytes32 method)</a>
+</li>
+        <li><a href="source/evmspec.data.html#evmspec.data.TransactionHash.to_0x_hex">(evmspec.data.TransactionHash method)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Data.to_0x_hex">(evmspec.structs.log.Data method)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.to_0x_hex">(evmspec.structs.log.Topic method)</a>
+</li>
+      </ul></li>
       <li><a href="source/evmspec.data.html#evmspec.data.BlockNumber.to_bytes">to_bytes() (evmspec.data.BlockNumber method)</a>
 
       <ul>
@@ -3766,6 +3778,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.block.MinedBlock.totalDifficulty">(evmspec.structs.block.MinedBlock attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/evmspec.structs.trace.html#evmspec.structs.trace.call.Trace">Trace (class in evmspec.structs.trace.call)</a>
 
       <ul>
@@ -3776,8 +3790,6 @@
         <li><a href="source/evmspec.structs.trace.html#evmspec.structs.trace.suicide.Trace">(class in evmspec.structs.trace.suicide)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/evmspec.structs.trace.html#evmspec.structs.trace.call.Trace.traceAddress">traceAddress (evmspec.structs.trace.call.Trace attribute)</a>
 
       <ul>
