deploy: 153182757b614c7b3ea82c29622c39ddfa0ecc16

--- a/genindex.html
+++ b/genindex.html
@@ -282,6 +282,8 @@
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AccessListEntry.address">(evmspec.structs.transaction.AccessListEntry attribute)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.address">(evmspec.structs.transaction.AuthorizationListEntry attribute)</a>
+</li>
       </ul></li>
       <li><a href="source/evmspec.structs.html#evmspec.structs.block.StakingWithdrawal.amount">amount (evmspec.structs.block.StakingWithdrawal attribute)</a>
 </li>
@@ -476,6 +478,16 @@
       <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.as_uint96">as_uint96 (evmspec.structs.log.Topic property)</a>
 </li>
       <li><a href="source/evmspec.structs.trace.html#evmspec.structs.trace.reward.Action.author">author (evmspec.structs.trace.reward.Action attribute)</a>, <a href="source/evmspec.structs.trace.html#id1">[1]</a>
+</li>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction7702.authorizationList">authorizationList (evmspec.structs.transaction.Transaction7702 property)</a>
+
+      <ul>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.Transaction7702.authorizationList">(evmspec.structs.Transaction7702 property)</a>
+</li>
+        <li><a href="source/evmspec.html#evmspec.Transaction7702.authorizationList">(evmspec.Transaction7702 property)</a>
+</li>
+      </ul></li>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry">AuthorizationListEntry (class in evmspec.structs.transaction)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1023,9 +1035,11 @@
       </ul></li>
       <li><a href="source/evmspec.data.html#evmspec.data.ChainId">ChainId (class in evmspec.data)</a>
 </li>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.chainId">chainId (evmspec.structs.transaction.Transaction1559 attribute)</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.chainId">chainId (evmspec.structs.transaction.AuthorizationListEntry attribute)</a>
 
       <ul>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.chainId">(evmspec.structs.transaction.Transaction1559 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.chainId">(evmspec.structs.transaction.Transaction2930 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.chainId">(evmspec.structs.transaction.Transaction4844 attribute)</a>
@@ -1748,6 +1762,8 @@
 </li>
         <li><a href="source/evmspec.structs.trace.html#evmspec.structs.trace.suicide.Action.gas">(evmspec.structs.trace.suicide.Action attribute)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.gas">(evmspec.structs.transaction.AuthorizationListEntry attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.gas">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.gas">(evmspec.structs.transaction.Transaction2930 attribute)</a>
@@ -1925,6 +1941,8 @@
         <li><a href="source/evmspec.structs.trace.html#evmspec.structs.trace.suicide.Trace.get">(evmspec.structs.trace.suicide.Trace method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AccessListEntry.get">(evmspec.structs.transaction.AccessListEntry method)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.get">(evmspec.structs.transaction.AuthorizationListEntry method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.get">(evmspec.structs.transaction.Transaction1559 method)</a>
 </li>
@@ -2374,6 +2392,8 @@
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AccessListEntry.items">(evmspec.structs.transaction.AccessListEntry method)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.items">(evmspec.structs.transaction.AuthorizationListEntry method)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.items">(evmspec.structs.transaction.Transaction1559 method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.items">(evmspec.structs.transaction.Transaction2930 method)</a>
@@ -2505,6 +2525,8 @@
         <li><a href="source/evmspec.structs.trace.html#evmspec.structs.trace.suicide.Trace.keys">(evmspec.structs.trace.suicide.Trace method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AccessListEntry.keys">(evmspec.structs.transaction.AccessListEntry method)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.keys">(evmspec.structs.transaction.AuthorizationListEntry method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.keys">(evmspec.structs.transaction.Transaction1559 method)</a>
 </li>
@@ -3023,6 +3045,8 @@
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.block.ShanghaiCapellaBlock.nonce">(evmspec.structs.block.ShanghaiCapellaBlock attribute)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.nonce">(evmspec.structs.transaction.AuthorizationListEntry attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.nonce">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.nonce">(evmspec.structs.transaction.Transaction2930 attribute)</a>
@@ -3206,9 +3230,11 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.r">r (evmspec.structs.transaction.Transaction1559 attribute)</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.r">r (evmspec.structs.transaction.AuthorizationListEntry attribute)</a>
 
       <ul>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.r">(evmspec.structs.transaction.Transaction1559 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.r">(evmspec.structs.transaction.Transaction2930 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.r">(evmspec.structs.transaction.Transaction4844 attribute)</a>
@@ -3502,9 +3528,11 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.s">s (evmspec.structs.transaction.Transaction1559 attribute)</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.s">s (evmspec.structs.transaction.AuthorizationListEntry attribute)</a>
 
       <ul>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.s">(evmspec.structs.transaction.Transaction1559 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.s">(evmspec.structs.transaction.Transaction2930 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.s">(evmspec.structs.transaction.Transaction4844 attribute)</a>
@@ -4523,6 +4551,8 @@
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AccessListEntry.values">(evmspec.structs.transaction.AccessListEntry method)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.values">(evmspec.structs.transaction.AuthorizationListEntry method)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.values">(evmspec.structs.transaction.Transaction1559 method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.values">(evmspec.structs.transaction.Transaction2930 method)</a>
@@ -4582,9 +4612,11 @@
 <h2 id="Y">Y</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.yParity">yParity (evmspec.structs.transaction.Transaction1559 attribute)</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.AuthorizationListEntry.yParity">yParity (evmspec.structs.transaction.AuthorizationListEntry attribute)</a>
 
       <ul>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.yParity">(evmspec.structs.transaction.Transaction1559 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.yParity">(evmspec.structs.transaction.Transaction2930 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.yParity">(evmspec.structs.transaction.Transaction4844 attribute)</a>
