--- a/_modules/evmspec/structs/transaction.html
+++ b/_modules/evmspec/structs/transaction.html
@@ -149,6 +149,22 @@
 <span class="p">)</span><span class="o">.</span><span class="n">decode</span>
 
 
+<div class="viewcode-block" id="AuthorizationListEntry"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.AuthorizationListEntry">[docs]</a><span class="nd">@final</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">AuthorizationListEntry</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+    <span class="n">chainId</span><span class="p">:</span> <span class="n">ChainId</span>
+    <span class="n">address</span><span class="p">:</span> <span class="n">Address</span>
+    <span class="n">nonce</span><span class="p">:</span> <span class="n">Nonce</span>
+    <span class="n">gas</span><span class="p">:</span> <span class="n">Wei</span>
+    <span class="n">yParity</span><span class="p">:</span> <span class="n">uint</span>
+    <span class="n">r</span><span class="p">:</span> <span class="n">HexBytes</span>
+    <span class="n">s</span><span class="p">:</span> <span class="n">HexBytes</span></div>
+
+
+<span class="n">_decode_authorization_list</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="n">List</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">]]]</span> <span class="o">=</span> <span class="p">(</span>
+    <span class="n">Decoder</span><span class="p">(</span><span class="nb">type</span><span class="o">=</span><span class="n">List</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">])</span><span class="o">.</span><span class="n">decode</span>
+<span class="p">)</span>
+
+
 <span class="k">class</span><span class="w"> </span><span class="nc">_TransactionBase</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Base class for Ethereum transactions.</span>
@@ -329,7 +345,26 @@
 <span class="sd">    Represents a type-7702 (EIP-7702) Ethereum transaction to set an EOA&#39;s bytecode.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="nb">type</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="n">HexBytes</span><span class="p">]</span> <span class="o">=</span> <span class="n">HexBytes</span><span class="p">(</span><span class="s2">&quot;4&quot;</span><span class="p">)</span></div>
+    <span class="nb">type</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="n">HexBytes</span><span class="p">]</span> <span class="o">=</span> <span class="n">HexBytes</span><span class="p">(</span><span class="s2">&quot;4&quot;</span><span class="p">)</span>
+    <span class="n">_authorizationList</span><span class="p">:</span> <span class="n">Raw</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s2">&quot;authorizationList&quot;</span><span class="p">)</span>  <span class="c1"># type: ignore [assignment]</span>
+
+    <span class="nd">@cached_property</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">authorizationList</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">]:</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Decodes the authorization list from raw format to a list of AuthorizationListEntry.</span>
+
+<span class="sd">        Example:</span>
+<span class="sd">            &gt;&gt;&gt; transaction = _TransactionBase(...)</span>
+<span class="sd">            &gt;&gt;&gt; access_list = transaction.accessList</span>
+<span class="sd">            &gt;&gt;&gt; isinstance(access_list, list)</span>
+<span class="sd">            True</span>
+<span class="sd">            &gt;&gt;&gt; isinstance(access_list[0], AccessListEntry)</span>
+<span class="sd">            True</span>
+
+<span class="sd">        See Also:</span>
+<span class="sd">            - :class:`AccessListEntry`</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="n">_decode_authorization_list</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_authorizationList</span><span class="p">)</span></div>
 
 
 <span class="n">Transaction</span> <span class="o">=</span> <span class="n">Union</span><span class="p">[</span>
